@@ -1,7 +1,9 @@
 #! /bin/sh -vx
-# Copyright 2017 Karl Berry <tex-live@tug.org>
+# Copyright 2017-2018 Karl Berry <tex-live@tug.org>
 # Copyright 2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
+
+LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
 
 ./luatry -e "error('test')" 2>error.tmp && exit 1
 
